--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,11 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-
+      
+    - name: Set up Git user
+      run: |
+        git config --global user.name "GitHub Actions Bot"
+        git config --global user.email "actions@github.com"
+        
     - name: Build and deploy
       run: npm run deploy
